--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@reduxjs/toolkit": "^2.2.1",
+    "axios": "^1.6.7",
     "bootstrap": "^5.3.2",
     "cart": "^1.1.2",
     "react": "^18.2.0",
